# crisp

./: Cargo.toml  README.md  watch
.github/workflows/: doc.yml  test.yml
src/: env.rs  error.rs  eval.rs  expr.rs  functions.rs  keywords.rs  macros.rs  main.rs  reader.rs  repl.rs
src/functions/: assert.rs  boolean.rs  io.rs  lists.rs  math.rs
tests/: assert.crisp  comments.crisp  exit_success.crisp  function.crisp  if_expr.crisp  lambda.crisp  print.crisp  variable.crisp
