[package]
name = "crisp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0.11"
cargo-nextest = "0.9.53"
clap = { version = "4.3.8", features = ["cargo"] }
colored = "2.0.0"
dyn-fmt = "0.3.0"
rustyline = "12.0.0"
snailquote = "0.3.0"
